...
              title: Text(result.device.platformName),
              subtitle: Text(result.device.id.id),
            ),
            const Divider(),
            ListTile(
              leading: const Icon(Icons.skip_previous, color: Colors.blue),
              title: const Text('Левый датчик'),
              onTap: () {
                ble.assignDevice('left', result.device);
                Navigator.pop(ctx);
              },
            ),
            ListTile(
...
